crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.9.11__associative_array_literals__duplicate_default.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type.assign_pattern_duplicate_default] 7:22..7:22: duplicate `default` entry in assignment pattern
---
unit (0 diagnostics)
