crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.9.11__associative_array_literals__positional_rejected.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type.assign_pattern_positional_in_assoc] 7:11..7:11: positional entry is not allowed in associative array assignment pattern
---
unit (0 diagnostics)
